@@ -1165,6 +1165,8 @@ Use the form below to log in as another user.',
 'badretype'                       => 'The passwords you entered do not match.',
 'userexists'                      => 'Username entered already in use.
 Please choose a different name.',
+'usercreate-normalisation'        => 'Due to technical restrictions the username "$1" is not possible in the given notation.
+You can use "$2".',
 'loginerror'                      => 'Login error',
 'createacct-error'                => 'Account creation error',
 'createaccounterror'              => 'Could not create account: $1',
